[gd_scene load_steps=11 format=3 uid="uid://b1w8iudqm0htd"]

[ext_resource type="Script" uid="uid://bc5q00kmi6np8" path="res://StartRoom/scenes/starting_room.gd" id="1_6sk8y"]
[ext_resource type="Texture2D" uid="uid://bqdh4r3tod5ff" path="res://StartRoom/images/Untitled.jpg" id="1_b652u"]
[ext_resource type="Script" uid="uid://cnsbpo44033mx" path="res://StartRoom/scenes/object.gd" id="2_6sk8y"]
[ext_resource type="Texture2D" uid="uid://dib6f582g3lom" path="res://StartRoom/images/id.jpg" id="3_b652u"]
[ext_resource type="Texture2D" uid="uid://iiqd35cv14si" path="res://StartRoom/images/Screenshot 2025-11-23 at 16-58-11 Files documents isolated paperwork paper work bureaucracy folder Premium Photo.png" id="5_txpld"]
[ext_resource type="AudioStream" uid="uid://dndkwue3fholq" path="res://StartRoom/sounds/paper.wav" id="6_gwrsf"]

[sub_resource type="Animation" id="Animation_gwrsf"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tfovf"]
_data = {
&"RESET": SubResource("Animation_gwrsf")
}

[sub_resource type="Animation" id="Animation_txpld"]
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Object/Card:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(-26, -0.25, 0, 0.25, 0, 104, -0.73333335, 2, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Object/Card:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(-6.000001, -0.25, 0, 0.25, 0, 692, -0.7, -1, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Object2/Files:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(447, -0.25, 0, 0.25, 0, 407, -0.6, 1, 0, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Object2/Files:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(-54, -0.25, 0, 0.25, 0, 603.99994, -0.7, 6.1035156e-05, 0, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwrsf"]
_data = {
&"SlideIn": SubResource("Animation_txpld")
}

[node name="StartingRoom" type="Node2D"]
script = ExtResource("1_6sk8y")

[node name="Table" type="TextureRect" parent="."]
offset_left = -12.0
offset_top = -20.0
offset_right = 252.0
offset_bottom = 171.0
scale = Vector2(4.4549856, 3.5780094)
texture = ExtResource("1_b652u")

[node name="Object" type="Sprite2D" parent="."]
position = Vector2(185, -405)
script = ExtResource("2_6sk8y")

[node name="Card" type="TextureButton" parent="Object"]
offset_left = 16.0
offset_top = 121.0
offset_right = 716.0
offset_bottom = 566.0005
rotation = -0.059481572
scale = Vector2(0.4278515, 0.40334523)
texture_normal = ExtResource("3_b652u")

[node name="Object2" type="Sprite2D" parent="."]
position = Vector2(162, -530)
script = ExtResource("2_6sk8y")

[node name="Files" type="TextureButton" parent="Object2"]
offset_left = 469.0
offset_top = -75.99988
offset_right = 1026.1655
offset_bottom = 604.38544
rotation = 0.03357922
scale = Vector2(0.74663645, 0.74663645)
texture_normal = ExtResource("5_txpld")
ignore_texture_size = true

[node name="paper" type="AudioStreamPlayer2D" parent="Object2"]
position = Vector2(662, 175)
stream = ExtResource("6_gwrsf")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tfovf"),
&"StartRoom": SubResource("AnimationLibrary_gwrsf")
}

[connection signal="button_down" from="Object/Card" to="." method="ID_interact"]
[connection signal="button_down" from="Object/Card" to="Object" method="Down"]
[connection signal="button_up" from="Object/Card" to="Object" method="Up"]
[connection signal="button_down" from="Object2/Files" to="." method="Files_interact"]
[connection signal="button_down" from="Object2/Files" to="Object2" method="Down"]
[connection signal="button_up" from="Object2/Files" to="Object2" method="Up"]
